--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "license": "MIT",
   "repository": "https://github.com/KotRikD/osu-db-parser",
   "dependencies": {
-    "osu-buffer": "^1.3.2"
+    "osu-buffer": "git+https://github.com/yadPe/osu-buffer.git"
   }
 }
